Keep the top and bottom padding, just change the left and right

--- a/themes/blocky.yaml
+++ b/themes/blocky.yaml
@@ -268,7 +268,8 @@ Blocky: &base
         border: var(--border-width) solid var(--clr-background-card);
       }
       ha-card.type-custom-mini-media-player .mmp-player {
-        padding: calc(16px - var(--border-width)) !important;
+        padding-left: calc(16px - var(--border-width)) !important;
+        padding-right: calc(16px - var(--border-width)) !important;
       }
       ha-card.type-custom-mini-media-player[artwork*="full-cover"].--has-artwork .mmp-player {
         background: linear-gradient(to top, rgba(var(--rgb-background-card), 1) calc(var(--border-width) * 1.5), rgba(var(--rgb-background-card), .8) 50%, rgba(var(--rgb-background-card), .4) 80%, rgba(var(--rgb-background-card), 0) 100%) !important;
