Refactor theme configuration and changelog
- Removed unrounded corners from sliders and other elements
- Added automated release creation to the workflow
- Updated the changelog format to adhere to Semantic Versioning
- Removed the default theme and its variants from the changelog
- Refactored the workflow to read the changelog based on the current tag version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,11 @@ jobs:
       - name: Read changelog
         id: get_changelog
         run: |
-          echo "BODY=$(cat .github/CHANGELOG.md)" >> $GITHUB_OUTPUT
+          # Get the current tag version
+          CURRENT_TAG=$(echo "${{ github.ref }}" | sed -n 's/refs\/tags\/v//p')
+          BODY=$(cat CHANGELOG.md | awk '/## \['$CURRENT_TAG'\]/{flag=1; next} /## \[/{flag=0} flag')
+          BODY=$(echo "$BODY" | sed 's/"/\\"/g')
+          echo "BODY=$BODY" >> $GITHUB_ENV
 
       - name: Check if prerelease
         id: check_prerelease
