fix: Updated tile icons to reflect changes in most recent hass update and correctly shows in drag and drop dashboards

--- a/themes/blocky.yaml
+++ b/themes/blocky.yaml
@@ -435,8 +435,12 @@ Blocky: &base
               border-radius: 0 !important;
             }
     ha-tile-icon:
+      .: |
+        ha-tile-icon {
+          padding: 8px !important;
+        }
       $: |
-        .shape {
+        .container {
           --mdc-icon-size: 24px;
           border-radius: 0 !important;
           width: 40px !important;
